--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -34,3 +34,20 @@ button{
     color: white;
     font-size: 20px;
 }
+.search-result{
+    width: 90%;
+    margin: 100px auto 25px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 15px;
+}
+.search-result img {
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+    border-radius: 5px;
+}
+.search-result img:hover {
+    border: 3px solid rgba(255, 255, 255, 0.685);
+    transition-duration: 300ms;
+}
