--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,15 @@ h1{
   margin: 100px auto 50px;
   font-weight: 600px;
 }
+
+@media only screen and (max-width: 480px) {
+  h1 {
+    font-size: x-large;
+  }
+
+  .menu {
+    display: none; /* ซ่อนเมนูที่ไม่จำเป็น */
+  }
+}
+
+  
